feat(jenkins): add jenkins guidance

--- a/jenkins/2.101/Dockerfile
+++ b/jenkins/2.101/Dockerfile
@@ -1,4 +1,6 @@
-FROM jenkins/jenkins:2.101-alpine 
+FROM jenkins/jenkins:2.101-alpine
+
+LABEL maintainer="bbbmj <baomengjiang@caicloud.io>"
 
 USER root
 
